--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
   border: 2.5px dashed #27ae60;
   border-radius: 14px;
   padding: 48px 0;
-  background: #181c1f;
+  background: #62666afd;
   color: #27ae60;
   font-size: 1.13em;
   font-weight: 500;
